--- a/Projekt/index.html
+++ b/Projekt/index.html
@@ -1,14 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>JS Live Server</title>
+    <style>
+        * {
+            margin: 0;
+        }
+
+        html,
+        body {
+            height: 100%;
+            overflow: hidden;
+        }
+
+        #cnv {
+            padding: 0;
+            margin: 0;
+            background-color: #fff;
+        }
+
+        #popup {
+            position: absolute;
+            display: none;
+            flex-direction: column;
+            justify-content: center;
+            background-color: rgba(0, 0, 0, 0.7);
+            top: 0;
+            bottom: 0;
+            left: 0;
+            right: 0;
+        }
+
+        #popup>div {
+            width: 15em;
+            margin: 0 auto;
+            background-color: #ffffff;
+            padding: 3em;
+            text-align: center;
+            border-radius: 0.5em;
+            border: 1px solid black;
+        }
+
+        #popup>div>div {
+            margin: 1em;
+        }
+    </style>
 </head>
+
 <body>
+    <div id="popup">
+        <div id="popup_innerDiv">
+            <div>
+                Game over!
+            </div>
+        </div>
+    </div>
     <script type="module" src="main.js"></script>
     <canvas id="canvas"></canvas>
 </body>
+
 </html>
