--- a/Projekt/index.html
+++ b/Projekt/index.html
@@ -48,6 +48,22 @@
 
         #popup>div>div {
             margin: 1em;
+            color: black;
+            font-size: xx-large;
+        }
+
+        #btn_replay{
+            background-color: #000000; /* set background color */
+            border: none; /* remove border */
+            color: white; /* set text color */
+            padding: 12px 24px; /* set padding */
+            text-align: center; /* center text */
+            text-decoration: none; /* remove underline */
+            display: inline-block; /* set display to inline block */
+            font-size: 16px; /* set font size */
+            margin: 4px 2px; /* set margin */
+            cursor: pointer; /* change cursor to pointer on hover */
+            border-radius: 4px; /* add rounded corners */
         }
     </style>
 </head>
