--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 
 <body>
-  <h1>Bugs Capture</h1>
-  <a href="Projekt/index.html">Bugs</a>
+  <h1>Balloons</h1>
+  <a href="Projekt/index.html">click me</a>
 
 
 
